test/libsolidity/syntaxTests/events/file_level_event_using.sol
event E();

type T is uint;
using {E} for T;
// ----
// TypeError 8187: (35-36): Expected function name.
